--- a/SushiStar/pom.xml
+++ b/SushiStar/pom.xml
@@ -49,6 +49,13 @@
             <version>10.0.17</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
